output/projetParser.java
// $ANTLR null /home/guypi/Documents/Compilateur_While/projet.g 2022-12-23 01:13:14

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class projetParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BASE", "COMM", "DEF", "DO", "ELSE", 
		"FONC", "FOR", "FOREACH", "IF", "IN", "INPUT", "NIL", "OUTPUT", "READWRITE", 
		"SYM", "Symbol", "THEN", "VAR", "Variable", "WHILE", "WS", "'%'", "'('", 
		"')'", "','", "':'", "':='", "';'", "'=?'", "'cons'", "'do'", "'else'", 
		"'fi'", "'for'", "'foreach'", "'function'", "'hd'", "'if'", "'in'", "'list'", 
		"'nil'", "'nop'", "'od'", "'read'", "'then'", "'tl'", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int BASE=4;
	public static final int COMM=5;
	public static final int DEF=6;
	public static final int DO=7;
	public static final int ELSE=8;
	public static final int FONC=9;
	public static final int FOR=10;
	public static final int FOREACH=11;
	public static final int IF=12;
	public static final int IN=13;
	public static final int INPUT=14;
	public static final int NIL=15;
	public static final int OUTPUT=16;
	public static final int READWRITE=17;
	public static final int SYM=18;
	public static final int Symbol=19;
	public static final int THEN=20;
	public static final int VAR=21;
	public static final int Variable=22;
	public static final int WHILE=23;
	public static final int WS=24;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "commands", "start", "vari", "exprs", "input", "lExpr", 
		"symb", "vars", "expression", "inputSub", "command", "exprBase", "function", 
		"program", "definition", "output"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public projetParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public projetParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public projetParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return projetParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/guypi/Documents/Compilateur_While/projet.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /home/guypi/Documents/Compilateur_While/projet.g:27:1: program : function ( program )? ;
	public final projetParser.program_return program() throws RecognitionException {
		projetParser.program_return retval = new projetParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope function1 =null;
		ParserRuleReturnScope program2 =null;


		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(27, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:27:9: ( function ( program )? )
			dbg.enterAlt(1);

			// /home/guypi/Documents/Compilateur_While/projet.g:28:3: function ( program )?
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(28,3);
			pushFollow(FOLLOW_function_in_program99);
			function1=function();
			state._fsp--;

			adaptor.addChild(root_0, function1.getTree());
			dbg.location(28,12);
			// /home/guypi/Documents/Compilateur_While/projet.g:28:12: ( program )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==39) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/guypi/Documents/Compilateur_While/projet.g:28:12: program
					{
					dbg.location(28,12);
					pushFollow(FOLLOW_program_in_program101);
					program2=program();
					state._fsp--;

					adaptor.addChild(root_0, program2.getTree());

					}
					break;

			}
			} finally {dbg.exitSubRule(1);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(28, 19);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// /home/guypi/Documents/Compilateur_While/projet.g:29:1: function : 'function' symb ':' definition -> ^( FONC symb definition ) ;
	public final projetParser.function_return function() throws RecognitionException {
		projetParser.function_return retval = new projetParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal3=null;
		Token char_literal5=null;
		ParserRuleReturnScope symb4 =null;
		ParserRuleReturnScope definition6 =null;

		Object string_literal3_tree=null;
		Object char_literal5_tree=null;
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");
		RewriteRuleSubtreeStream stream_symb=new RewriteRuleSubtreeStream(adaptor,"rule symb");

		try { dbg.enterRule(getGrammarFileName(), "function");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(29, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:29:9: ( 'function' symb ':' definition -> ^( FONC symb definition ) )
			dbg.enterAlt(1);

			// /home/guypi/Documents/Compilateur_While/projet.g:30:3: 'function' symb ':' definition
			{
			dbg.location(30,3);
			string_literal3=(Token)match(input,39,FOLLOW_39_in_function111);  
			stream_39.add(string_literal3);
			dbg.location(30,14);
			pushFollow(FOLLOW_symb_in_function113);
			symb4=symb();
			state._fsp--;

			stream_symb.add(symb4.getTree());dbg.location(30,19);
			char_literal5=(Token)match(input,29,FOLLOW_29_in_function115);  
			stream_29.add(char_literal5);
			dbg.location(30,23);
			pushFollow(FOLLOW_definition_in_function117);
			definition6=definition();
			state._fsp--;

			stream_definition.add(definition6.getTree());
			// AST REWRITE
			// elements: definition, symb
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 31:3: -> ^( FONC symb definition )
			{
				dbg.location(31,6);
				// /home/guypi/Documents/Compilateur_While/projet.g:31:6: ^( FONC symb definition )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(31,8);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FONC, "FONC"), root_1);
				dbg.location(31,13);
				adaptor.addChild(root_1, stream_symb.nextTree());dbg.location(31,18);
				adaptor.addChild(root_1, stream_definition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 2);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "function");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// /home/guypi/Documents/Compilateur_While/projet.g:33:1: definition : 'read' ( inputSub )? '%' commands '%' 'write' output -> ^( READWRITE ^( INPUT ( inputSub )? ) commands ^( OUTPUT output ) ) ;
	public final projetParser.definition_return definition() throws RecognitionException {
		projetParser.definition_return retval = new projetParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal7=null;
		Token char_literal9=null;
		Token char_literal11=null;
		Token string_literal12=null;
		ParserRuleReturnScope inputSub8 =null;
		ParserRuleReturnScope commands10 =null;
		ParserRuleReturnScope output13 =null;

		Object string_literal7_tree=null;
		Object char_literal9_tree=null;
		Object char_literal11_tree=null;
		Object string_literal12_tree=null;
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
		RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try { dbg.enterRule(getGrammarFileName(), "definition");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(33, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:34:3: ( 'read' ( inputSub )? '%' commands '%' 'write' output -> ^( READWRITE ^( INPUT ( inputSub )? ) commands ^( OUTPUT output ) ) )
			dbg.enterAlt(1);

			// /home/guypi/Documents/Compilateur_While/projet.g:34:5: 'read' ( inputSub )? '%' commands '%' 'write' output
			{
			dbg.location(34,5);
			string_literal7=(Token)match(input,47,FOLLOW_47_in_definition141);  
			stream_47.add(string_literal7);
			dbg.location(34,12);
			// /home/guypi/Documents/Compilateur_While/projet.g:34:12: ( inputSub )?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==Variable) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/guypi/Documents/Compilateur_While/projet.g:34:12: inputSub
					{
					dbg.location(34,12);
					pushFollow(FOLLOW_inputSub_in_definition143);
					inputSub8=inputSub();
					state._fsp--;

					stream_inputSub.add(inputSub8.getTree());
					}
					break;

			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(34,22);
			char_literal9=(Token)match(input,25,FOLLOW_25_in_definition146);  
			stream_25.add(char_literal9);
			dbg.location(34,26);
			pushFollow(FOLLOW_commands_in_definition148);
			commands10=commands();
			state._fsp--;

			stream_commands.add(commands10.getTree());dbg.location(34,35);
			char_literal11=(Token)match(input,25,FOLLOW_25_in_definition150);  
			stream_25.add(char_literal11);
			dbg.location(34,39);
			string_literal12=(Token)match(input,51,FOLLOW_51_in_definition152);  
			stream_51.add(string_literal12);
			dbg.location(34,47);
			pushFollow(FOLLOW_output_in_definition154);
			output13=output();
			state._fsp--;

			stream_output.add(output13.getTree());
			// AST REWRITE
			// elements: inputSub, commands, output
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 35:3: -> ^( READWRITE ^( INPUT ( inputSub )? ) commands ^( OUTPUT output ) )
			{
				dbg.location(35,8);
				// /home/guypi/Documents/Compilateur_While/projet.g:35:8: ^( READWRITE ^( INPUT ( inputSub )? ) commands ^( OUTPUT output ) )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(35,10);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(READWRITE, "READWRITE"), root_1);
				dbg.location(35,21);
				// /home/guypi/Documents/Compilateur_While/projet.g:35:21: ^( INPUT ( inputSub )? )
				{
				Object root_2 = (Object)adaptor.nil();
				dbg.location(35,23);
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUT, "INPUT"), root_2);
				dbg.location(35,29);
				// /home/guypi/Documents/Compilateur_While/projet.g:35:29: ( inputSub )?
				if ( stream_inputSub.hasNext() ) {
					dbg.location(35,29);
					adaptor.addChild(root_2, stream_inputSub.nextTree());
				}
				stream_inputSub.reset();

				adaptor.addChild(root_1, root_2);
				}
				dbg.location(35,40);
				adaptor.addChild(root_1, stream_commands.nextTree());dbg.location(35,49);
				// /home/guypi/Documents/Compilateur_While/projet.g:35:49: ^( OUTPUT output )
				{
				Object root_2 = (Object)adaptor.nil();
				dbg.location(35,51);
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_2);
				dbg.location(35,58);
				adaptor.addChild(root_2, stream_output.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(36, 2);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "definition");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "definition"


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// /home/guypi/Documents/Compilateur_While/projet.g:37:1: input : ( inputSub |);
	public final projetParser.input_return input() throws RecognitionException {
		projetParser.input_return retval = new projetParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputSub14 =null;


		try { dbg.enterRule(getGrammarFileName(), "input");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(37, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:37:8: ( inputSub |)
			int alt3=2;
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==Variable) ) {
				alt3=1;
			}
			else if ( (LA3_0==EOF) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /home/guypi/Documents/Compilateur_While/projet.g:38:3: inputSub
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(38,3);
					pushFollow(FOLLOW_inputSub_in_input196);
					inputSub14=inputSub();
					state._fsp--;

					adaptor.addChild(root_0, inputSub14.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/guypi/Documents/Compilateur_While/projet.g:38:13: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(38, 12);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "input");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "input"


	public static class inputSub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inputSub"
	// /home/guypi/Documents/Compilateur_While/projet.g:39:1: inputSub : vari ( ',' inputSub )? -> ^( VAR ( vari )+ ) ;
	public final projetParser.inputSub_return inputSub() throws RecognitionException {
		projetParser.inputSub_return retval = new projetParser.inputSub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal16=null;
		ParserRuleReturnScope vari15 =null;
		ParserRuleReturnScope inputSub17 =null;

		Object char_literal16_tree=null;
		RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
		RewriteRuleSubtreeStream stream_vari=new RewriteRuleSubtreeStream(adaptor,"rule vari");
		RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");

		try { dbg.enterRule(getGrammarFileName(), "inputSub");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(39, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:40:3: ( vari ( ',' inputSub )? -> ^( VAR ( vari )+ ) )
			dbg.enterAlt(1);

			// /home/guypi/Documents/Compilateur_While/projet.g:40:5: vari ( ',' inputSub )?
			{
			dbg.location(40,5);
			pushFollow(FOLLOW_vari_in_inputSub207);
			vari15=vari();
			state._fsp--;

			stream_vari.add(vari15.getTree());dbg.location(40,10);
			// /home/guypi/Documents/Compilateur_While/projet.g:40:10: ( ',' inputSub )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==28) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/guypi/Documents/Compilateur_While/projet.g:40:11: ',' inputSub
					{
					dbg.location(40,11);
					char_literal16=(Token)match(input,28,FOLLOW_28_in_inputSub210);  
					stream_28.add(char_literal16);
					dbg.location(40,15);
					pushFollow(FOLLOW_inputSub_in_inputSub212);
					inputSub17=inputSub();
					state._fsp--;

					stream_inputSub.add(inputSub17.getTree());
					}
					break;

			}
			} finally {dbg.exitSubRule(4);}

			// AST REWRITE
			// elements: vari
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 41:3: -> ^( VAR ( vari )+ )
			{
				dbg.location(41,6);
				// /home/guypi/Documents/Compilateur_While/projet.g:41:6: ^( VAR ( vari )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(41,8);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);
				dbg.location(41,12);
				if ( !(stream_vari.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_vari.hasNext() ) {
					dbg.location(41,12);
					adaptor.addChild(root_1, stream_vari.nextTree());
				}
				stream_vari.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(41, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "inputSub");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "inputSub"


	public static class output_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "output"
	// /home/guypi/Documents/Compilateur_While/projet.g:42:1: output : vari ( ',' output )? -> ^( VAR ( vari )+ ) ;
	public final projetParser.output_return output() throws RecognitionException {
		projetParser.output_return retval = new projetParser.output_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal19=null;
		ParserRuleReturnScope vari18 =null;
		ParserRuleReturnScope output20 =null;

		Object char_literal19_tree=null;
		RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_vari=new RewriteRuleSubtreeStream(adaptor,"rule vari");

		try { dbg.enterRule(getGrammarFileName(), "output");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(42, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:42:8: ( vari ( ',' output )? -> ^( VAR ( vari )+ ) )
			dbg.enterAlt(1);

			// /home/guypi/Documents/Compilateur_While/projet.g:43:3: vari ( ',' output )?
			{
			dbg.location(43,3);
			pushFollow(FOLLOW_vari_in_output236);
			vari18=vari();
			state._fsp--;

			stream_vari.add(vari18.getTree());dbg.location(43,8);
			// /home/guypi/Documents/Compilateur_While/projet.g:43:8: ( ',' output )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( (LA5_0==28) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// /home/guypi/Documents/Compilateur_While/projet.g:43:9: ',' output
					{
					dbg.location(43,9);
					char_literal19=(Token)match(input,28,FOLLOW_28_in_output239);  
					stream_28.add(char_literal19);
					dbg.location(43,13);
					pushFollow(FOLLOW_output_in_output241);
					output20=output();
					state._fsp--;

					stream_output.add(output20.getTree());
					}
					break;

			}
			} finally {dbg.exitSubRule(5);}

			// AST REWRITE
			// elements: vari
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 44:3: -> ^( VAR ( vari )+ )
			{
				dbg.location(44,6);
				// /home/guypi/Documents/Compilateur_While/projet.g:44:6: ^( VAR ( vari )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(44,8);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);
				dbg.location(44,12);
				if ( !(stream_vari.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_vari.hasNext() ) {
					dbg.location(44,12);
					adaptor.addChild(root_1, stream_vari.nextTree());
				}
				stream_vari.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(44, 18);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "output");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "output"


	public static class commands_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// /home/guypi/Documents/Compilateur_While/projet.g:45:1: commands : command ( ';' commands )? -> ^( COMM ( command )+ ) ;
	public final projetParser.commands_return commands() throws RecognitionException {
		projetParser.commands_return retval = new projetParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal22=null;
		ParserRuleReturnScope command21 =null;
		ParserRuleReturnScope commands23 =null;

		Object char_literal22_tree=null;
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try { dbg.enterRule(getGrammarFileName(), "commands");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(45, 0);

		try {
			// /home/guypi/Documents/Compilateur_While/projet.g:45:9: ( command ( ';' commands )? -> ^( COMM ( command )+ ) )
			dbg.enterAlt(1);

			// /home/guypi/Documents/Compilateur_While/projet.g:46:3: command ( ';' commands )?
			{
			dbg.location(46,3);
			pushFollow(FOLLOW_command_in_commands264);
			command21=command();
			state._fsp--;

			stream_command.add(command21.getTree());dbg.location(46,11);
			// /home/guypi/Documents/Compilateur_While/projet.g:46:11: ( ';' commands )?
			int alt6=2;
			try { dbg.enterSubRule(6);
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==31) ) {
				alt6=1;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /home/guypi/Documents/Compilateur_While/projet.g:46:12: ';' commands
					{
					dbg.location(46,12);
					char_literal22=(Token)match(input,31,FOLLOW_31_in_commands267);  
					stream_31.add(char_literal22);
					dbg.location(46,16);
					pushFollow(FOLLOW_commands_in_commands269);
					commands23=commands();
					state._fsp--;

					stream_commands.add(commands23.getTree());
					}
					break;

			}
			} finally {dbg.exitSubRule(6);}
